src/assets/styles/globalBar.module.css
/**
 *
 * The style of the global bar and its elements
 *
**/

.globalbar {
    height: var(--globalbar--height);
    transition: all 0.1s;
    flex-grow: 1;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.globalbar[disabled] {
    opacity: 1;
}

.globalbar[data-show-content=true] {
    /*animation: fadeInMainFull 2s cubic-bezier(0.87, 0.02, 0.01, 1) forwards;*/
    animation: fadeInMainFull 1.5s cubic-bezier(0.8, 0.05, 0, 1) forwards;
}

@keyframes fadeInMainFull {
    0% {
        flex-grow: 1;
    }
    25%,
    50% {
        flex-grow: 1;
    }
    100% {
        flex-grow: 0;
    }
}

.userprofile {
    width: 68px;
    height: 68px;
    background-color: #fafafa;
    border: 1px solid #e2e2e2;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    opacity: 0.4;
    position: absolute;
}

.globalbar[data-show-content=false] .userprofile {
    animation: fadeInPP 3s ease forwards;
}

.globalbar[data-show-content=true] .userprofile {
    animation: fadeInPPFull 2s cubic-bezier(0.87, 0.02, 0.01, 1) forwards;
}

.userProfileImage {
    border-radius: 100%;
}

.globalbar[data-show-content=false] .userProfileImage {
    animation: opacityInOut 2s ease-in-out infinite forwards;
}

@keyframes opacityInOut {
    0% {
        opacity: 0.52;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0.52;
    }
}

@keyframes fadeInPP {
    from {
        transform: scale(0.7);
    }
    to {
        transform: scale(0.75);
    }
}

@keyframes fadeInPPFull {
    0% {
        opacity: 0.4;
        transform: scale(0.74);
    }
    25%,
    50% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.globalbar .leftControls {
    margin-right: auto
}

.globalbar .rightControls {
    margin-left: auto;
}

.globalbar .rightControls,
.globalbar .leftControls {
    opacity: 0;
    animation-name: fadeIn;
    animation-duration: 0.2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
    animation-delay: 1.1s;
}

.globalbar .rightControls svg,
.globalbar .leftControls svg {
    height: 28px;
    width: 28px;
    margin: 0px 6px;
    --svg-color: var(--text-color);
    --svg-color-2: var(--accent-color);
    display: inline-block;
    cursor: pointer;
}

.globalbar .rightControls .bellContainer {
    display: inline-block;
    cursor: pointer;
    margin: 0px 6px;
}

.globalbar .rightControls .bellContainer svg {
    margin: 0px;
}

.globalbar svg {
    position: relative;
    border-radius: 50%;
    padding: 6px;
    box-shadow: 0 0 0 4px transparent;
    transition: background-color 0.08s, opacity 0.1s, box-shadow 0.08s;
    overflow: visible;
}

.globalbar svg:hover,
.globalbar svg:active {
    background-color: var(--background-blend);
    box-shadow: 0 0 0 4px var(--background-blend);
}

.globalbar svg:active {
    opacity: 0.6;
}

.globalbar .rightControls .bellContainer[data-pin=true] .bell,
.globalbar .rightControls .bellContainer[data-pin=false] .bellPin {
    display: none;
}

.globalbar[data-show-content=false] .leftControls,
.globalbar[data-show-content=false] .rightControls,
[data-display-mode=tab] .globalbar .leftControls .navControl {
    display: none;
}

.globalbar .leftControls .navControl,
.globalbar .leftControls .otherControl {
    display: inline-block;
    margin: 0px 6px;
}

.globalbar .leftControls .navControl svg:first-child,
.globalbar .leftControls .otherControl svg:first-child {
    margin-left: 0px;
}

.globalbar .leftControls .navControl svg:last-child,
.globalbar .leftControls .otherControl svg:last-child {
    margin-right: 0px;
}

.globalbar[data-show-content-finished=true] .rightControls,
.globalbar[data-show-content-finished=true] .leftControls {
    animation-name: fadeIn;
    animation-duration: 0.2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
    animation-delay: 0s;
}

.globalbar .rightControls[data-signed-in=false] {
    display: none;
}

@keyframes fadeIn {
    from {
        opacity: 0;
        transform: scale(0.9);
        padding: 0px 4px;
    }
    to {
        padding: 0px;
        opacity: 1;
        transform: scale(1);
    }
}

.globalbar[data-processing=true] .leftControls,
.globalbar[data-processing=true] .rightControls {
    opacity: 0.4 !important;
    pointer-events: none !important;
}

